[gd_scene load_steps=5 format=3 uid="uid://cxqy16rxys1pg"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_3l33h"]
[ext_resource type="Texture2D" uid="uid://caeaxk81mt4pd" path="res://win.png" id="2_sanew"]

[sub_resource type="SystemFont" id="SystemFont_vbxd5"]

[sub_resource type="LabelSettings" id="LabelSettings_porlx"]
font = SubResource("SystemFont_vbxd5")
font_size = 48

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_3l33h")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 1.113
anchor_bottom = 1.593
offset_right = 271.824
offset_bottom = 395.736

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 1974.0
offset_bottom = 956.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "CONGRATULATION
"
label_settings = SubResource("LabelSettings_porlx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonMAIN" type="Button" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "MAIN MENU"

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1978.0
offset_bottom = 1129.0
texture = ExtResource("2_sanew")

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonMAIN" to="CanvasLayer" method="_on_button_main_pressed"]
